--- a/index.html
+++ b/index.html
@@ -4,19 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Namaste React</title>
-    <link rel="stylesheet" href="./index.css"/>
+    <link rel="stylesheet" href="index.css"/>
 </head>
 <body>
     <div id="root">
-        <h1>Hello World!!!</h1>
     </div>
-    <!-- <script>
-        const heading = document.createElement("h1");
-        heading.innerHTML = "Hello World from Javascript!!!"
-
-        const root = document.getElementById("root");
-        root.appendChild(heading);
-    </script> -->
     <script type="module" src="./App.js"> </script>
 </body>
 </html>
